plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'io.swagger.core.v3.swagger-gradle-plugin' version '2.2.40'
}

group = 'com.ecoembes'
version = '0.0.1-SNAPSHOT'
description = 'Ecoembes Grupo 7'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web-services'
    implementation 'io.swagger.core.v3:swagger-annotations:2.2.40'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.h2database:h2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('resolve', io.swagger.v3.plugins.gradle.tasks.ResolveTask) {
    outputFileName = 'api-docs'
    outputFormat = 'YAML'
    prettyPrint = true
    classpath = sourceSets.main.runtimeClasspath
    resourcePackages = ['com.ecoembes'] // Cambiar al paquete correcto
    outputPath = file("$buildDir/swagger").absolutePath
}

tasks.named('test') {
    useJUnitPlatform()
}
